# RandomCheck

./: .gitignore  .zshrc  CMakeLists.txt  generate_random.cpp  gr  readme
include/: decls.h  defs.h  externs.h  generators.h  randomAllCheck.h  stat_fncs.h  utilities.h
src/: approximateEntropy.c  autoCorrelation.c  binaryDerivative.c  blockFrequency.c  cusum.c  discreteFourierTransform.c  frequency.c  globalVar.c  linearComplexity.c  longestRunOfOnes.c  main.cpp  matrix.c  overlappingTemplateMatchings.c  poker.c  randomAllCheck.cpp  rank.c  runs.c  runsDistribution.c  universal.c  utilities.c
